# testing-code-that-accesses-db-in-haskell

./: .gitignore  README.md
with-db/in-memory-db/: in-memory-db.cabal
with-db/in-memory-db/src/: Lib.hs
with-db/in-memory-db/test/: Test.hs
with-db/testing-db/: testing-db.cabal
with-db/testing-db/app/: Main.hs
with-db/testing-db/src/: Lib.hs
with-db/testing-db/test/: Test.hs
without-db/datatype/: datatype.cabal
without-db/datatype/src/: Lib.hs
without-db/datatype/test/: Test.hs
without-db/free-monad/: Lib.hs  free-monad.cabal
without-db/free-monad/src/: Lib.hs
without-db/free-monad/test/: Test.hs
without-db/typeclass/: typeclass.cabal
without-db/typeclass/src/: Lib.hs
without-db/typeclass/test/: Test.hs
