name:                free-monad
version:             0.1.0.0
synopsis:            Testing a Haskell REST API based on a free monad.
description:         Please see README.md
homepage:            http://github.com/cdepillabout/testing-code-that-accesses-db-in-haskell
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdepillabout@gmail.com
copyright:           2015 Dennis Gosnell
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , either
                     , lens
                     , monad-logger
                     , mtl
                     , operational
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , servant
                     , servant-server
                     , text
                     , transformers
                     , warp
  default-language:    Haskell2010

executable free-monad-exe
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , free-monad
  default-language:    Haskell2010

test-suite free-monad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      .
  main-is:             Test.hs
  build-depends:       base
                     , free-monad
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/free-monad
